# MyKerasPlayGround

./: .gitignore  extract.py  predict.py  pyproject.toml  train_on_images.py  train_on_text.py
models/: sequential_model.py  simple_lstm_sentiment_anal.py  simple_nlp_sentiment_analysis.py
models/model_generate_text0/: non_contextual_ptm-lstm-text_gen.py
models/model_sentiment0/: model_config.json  transfer_lstm_sentiment_anal.py
models/model_sentiment1/: model_config.json  transfer_lstm_sentiment_anal.py
models/models_for_images/: cnn_3convs_1dense_binary.py  cnn_3convs_1dense_catergorical.py  combinatorics.py  coursera_convNet.py  image_contours.py  pre_trained_model.py
testing/: extract_entity.py  extract_entity_relation.py  navigate_parse_tree-subtrees.py  phrase_matcher.py  test1.py
utils/: config.py  filter_images.py  get_images.py  saves.py  text_preprocess.py  visualize.py
