[tool.poetry]
name = "mykerasplayground"
version = "0.1.0"
description = ""
authors = ["Papanikandros <tinonikandros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.4"
dotmap = "^1.3.23"
matplotlib = "^3.3.3"
tensorflow = "^2.3.1"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
